cmake_minimum_required(VERSION 3.21)
project(Doodle VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(DOODLE_RENDERER "NONE" CACHE STRING "Doodle renderer: NONE, SKIA, BLEND2D, NANOVG, VELLO")
set(DOODLE_SKIA_ROOT "" CACHE PATH "Root produced by scripts/fetch-totalcross-skia.sh")
set(DOODLE_SKIA_VERSION "" CACHE STRING "Version label shown by the Skia renderer")
set(DOODLE_IOS_PNG_ROOT "" CACHE PATH "iOS libpng prefix containing include/png.h and lib/libpng16.a")
set(DOODLE_IOS_ZLIB_ROOT "" CACHE PATH "iOS zlib prefix containing include/zlib.h and lib/libz.a")
set(DOODLE_ANDROID_PNG_ROOT "" CACHE PATH "Android libpng prefix containing include/png.h and lib/libpng16.a")
set(DOODLE_ANDROID_ZLIB_ROOT "" CACHE PATH "Android zlib prefix containing include/zlib.h and lib/libz.a")
option(DOODLE_SKIA_ENABLE_VULKAN "Build the Skia provider with Magic Vulkan interop" OFF)
set_property(CACHE DOODLE_RENDERER PROPERTY STRINGS NONE SKIA BLEND2D NANOVG VELLO)
option(DOODLE_BUILD_TESTS "Build Doodle tests" ON)
if(NOT DOODLE_RENDERER STREQUAL "NONE" AND NOT DOODLE_RENDERER STREQUAL "SKIA")
  message(FATAL_ERROR "DOODLE_RENDERER=${DOODLE_RENDERER} is declared but not implemented for this repository revision; select NONE or SKIA.")
endif()
if(NOT TARGET Magic::Magic)
  find_package(Magic CONFIG REQUIRED)
endif()
add_library(doodle_core
  src/doodle_renderer.c
  renderers/blend2d/doodle_blend2d_stub.c
  renderers/nanovg/doodle_nanovg_stub.c
  renderers/vello/doodle_vello_stub.c)
set_target_properties(doodle_core PROPERTIES EXPORT_NAME Doodle)
add_library(Doodle::Doodle ALIAS doodle_core)
target_link_libraries(doodle_core PUBLIC Magic::Magic)
target_include_directories(doodle_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(doodle_core PUBLIC c_std_11)
if(DOODLE_RENDERER STREQUAL "SKIA")
  enable_language(CXX)
  if(NOT DOODLE_SKIA_ROOT)
    message(FATAL_ERROR "DOODLE_RENDERER=SKIA requires -DDOODLE_SKIA_ROOT=<directory created by scripts/fetch-totalcross-skia.sh>.")
  endif()
  if(NOT DOODLE_SKIA_VERSION)
    get_filename_component(DOODLE_SKIA_ROOT_NAME "${DOODLE_SKIA_ROOT}" NAME)
    string(REGEX REPLACE "^skia-" "" DOODLE_SKIA_VERSION "${DOODLE_SKIA_ROOT_NAME}")
    if(DOODLE_SKIA_VERSION STREQUAL DOODLE_SKIA_ROOT_NAME)
      set(DOODLE_SKIA_VERSION "external")
    endif()
  endif()
  if(EMSCRIPTEN)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-wasm32.a")
  elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    if(CMAKE_OSX_SYSROOT MATCHES "[iI][pP]hone[Ss]imulator")
      set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-ios-simulator-arm64.a")
    else()
      set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-ios-arm64.a")
    endif()
  elseif(CMAKE_SYSTEM_NAME STREQUAL "Android")
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-android-arm64-v8a.a")
  elseif(APPLE)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-macos-arm64.a")
  elseif(UNIX)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-linux-x86_64.a")
  elseif(WIN32)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-windows-x64.lib")
  endif()
  if(NOT EXISTS "${DOODLE_SKIA_ROOT}/headers/modules/skia/include/core/SkCanvas.h" OR NOT EXISTS "${DOODLE_SKIA_LIBRARY}")
    message(FATAL_ERROR "DOODLE_SKIA_ROOT must contain headers/modules/skia/include/core/SkCanvas.h and the matching Skia archive.")
  endif()
  add_library(doodle_skia_external STATIC IMPORTED GLOBAL)
  set_target_properties(doodle_skia_external PROPERTIES IMPORTED_LOCATION "${DOODLE_SKIA_LIBRARY}" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_SKIA_ROOT}/headers/modules/skia")
  if(EMSCRIPTEN)
    target_link_options(doodle_skia_external INTERFACE "-sUSE_WEBGL2=1" "-sMIN_WEBGL_VERSION=2" "-sMAX_WEBGL_VERSION=2")
  elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    if(NOT EXISTS "${DOODLE_IOS_PNG_ROOT}/include/png.h" OR NOT EXISTS "${DOODLE_IOS_PNG_ROOT}/lib/libpng16.a" OR NOT EXISTS "${DOODLE_IOS_ZLIB_ROOT}/include/zlib.h" OR NOT EXISTS "${DOODLE_IOS_ZLIB_ROOT}/lib/libz.a")
      message(FATAL_ERROR "iOS Doodle Skia requires DOODLE_IOS_PNG_ROOT and DOODLE_IOS_ZLIB_ROOT prefixes with matching include and lib directories.")
    endif()
    add_library(doodle_ios_png STATIC IMPORTED GLOBAL)
    set_target_properties(doodle_ios_png PROPERTIES IMPORTED_LOCATION "${DOODLE_IOS_PNG_ROOT}/lib/libpng16.a" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_IOS_PNG_ROOT}/include")
    add_library(doodle_ios_zlib STATIC IMPORTED GLOBAL)
    set_target_properties(doodle_ios_zlib PROPERTIES IMPORTED_LOCATION "${DOODLE_IOS_ZLIB_ROOT}/lib/libz.a" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_IOS_ZLIB_ROOT}/include")
    target_link_libraries(doodle_skia_external INTERFACE doodle_ios_png doodle_ios_zlib)
  elseif(CMAKE_SYSTEM_NAME STREQUAL "Android")
    if(NOT EXISTS "${DOODLE_ANDROID_PNG_ROOT}/include/png.h" OR NOT EXISTS "${DOODLE_ANDROID_PNG_ROOT}/lib/libpng16.a" OR NOT EXISTS "${DOODLE_ANDROID_ZLIB_ROOT}/include/zlib.h" OR NOT EXISTS "${DOODLE_ANDROID_ZLIB_ROOT}/lib/libz.a")
      message(FATAL_ERROR "Android Doodle Skia requires DOODLE_ANDROID_PNG_ROOT and DOODLE_ANDROID_ZLIB_ROOT prefixes with matching include and lib directories.")
    endif()
    add_library(doodle_android_png STATIC IMPORTED GLOBAL)
    set_target_properties(doodle_android_png PROPERTIES IMPORTED_LOCATION "${DOODLE_ANDROID_PNG_ROOT}/lib/libpng16.a" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_ANDROID_PNG_ROOT}/include")
    add_library(doodle_android_zlib STATIC IMPORTED GLOBAL)
    set_target_properties(doodle_android_zlib PROPERTIES IMPORTED_LOCATION "${DOODLE_ANDROID_ZLIB_ROOT}/lib/libz.a" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_ANDROID_ZLIB_ROOT}/include")
    find_library(DOODLE_ANDROID_LIBRARY android REQUIRED)
    find_library(DOODLE_LOG_LIBRARY log REQUIRED)
    find_library(DOODLE_EGL_LIBRARY EGL REQUIRED)
    find_library(DOODLE_GLESV2_LIBRARY GLESv2 REQUIRED)
    find_library(DOODLE_VULKAN_LIBRARY vulkan REQUIRED)
    target_link_libraries(doodle_skia_external INTERFACE doodle_android_png doodle_android_zlib ${DOODLE_ANDROID_LIBRARY} ${DOODLE_LOG_LIBRARY} ${DOODLE_EGL_LIBRARY} ${DOODLE_GLESV2_LIBRARY} ${DOODLE_VULKAN_LIBRARY})
  else()
    find_package(PNG REQUIRED)
    find_package(ZLIB REQUIRED)
    target_link_libraries(doodle_skia_external INTERFACE PNG::PNG ZLIB::ZLIB)
    if(DOODLE_SKIA_ENABLE_VULKAN)
      find_package(Vulkan REQUIRED)
      target_link_libraries(doodle_skia_external INTERFACE Vulkan::Vulkan)
    endif()
  endif()
  if(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    find_library(FOUNDATION_FRAMEWORK Foundation REQUIRED)
    find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
    find_library(CORETEXT_FRAMEWORK CoreText REQUIRED)
    find_library(IMAGEIO_FRAMEWORK ImageIO REQUIRED)
    find_library(METAL_FRAMEWORK Metal REQUIRED)
    find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
    find_library(UIKIT_FRAMEWORK UIKit REQUIRED)
    target_link_libraries(doodle_skia_external INTERFACE ${FOUNDATION_FRAMEWORK} ${COREGRAPHICS_FRAMEWORK} ${CORETEXT_FRAMEWORK} ${IMAGEIO_FRAMEWORK} ${METAL_FRAMEWORK} ${QUARTZCORE_FRAMEWORK} ${UIKIT_FRAMEWORK})
  elseif(APPLE)
    find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
    find_library(COREFOUNDATION_FRAMEWORK CoreFoundation REQUIRED)
    find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
    find_library(CORETEXT_FRAMEWORK CoreText REQUIRED)
    find_library(IMAGEIO_FRAMEWORK ImageIO REQUIRED)
    find_library(METAL_FRAMEWORK Metal REQUIRED)
    find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
    target_link_libraries(doodle_skia_external INTERFACE ${COCOA_FRAMEWORK} ${COREFOUNDATION_FRAMEWORK} ${COREGRAPHICS_FRAMEWORK} ${CORETEXT_FRAMEWORK} ${IMAGEIO_FRAMEWORK} ${METAL_FRAMEWORK} ${QUARTZCORE_FRAMEWORK})
  endif()
  add_library(doodle_renderer_skia renderers/skia/doodle_skia_renderer.cpp)
  set_target_properties(doodle_renderer_skia PROPERTIES EXPORT_NAME Skia)
  add_library(Doodle::Skia ALIAS doodle_renderer_skia)
  target_link_libraries(doodle_renderer_skia PUBLIC doodle_core doodle_skia_external)
  target_compile_features(doodle_renderer_skia PRIVATE cxx_std_17)
  target_compile_definitions(doodle_renderer_skia PRIVATE SK_GL=1 DOODLE_SKIA_VERSION="${DOODLE_SKIA_VERSION}")
  if(CMAKE_SYSTEM_NAME STREQUAL "Android" OR DOODLE_SKIA_ENABLE_VULKAN)
    target_compile_definitions(doodle_renderer_skia PRIVATE SK_VULKAN=1)
  endif()
  if(APPLE)
    target_compile_definitions(doodle_renderer_skia PRIVATE SK_METAL=1)
  endif()
  if(APPLE AND NOT CMAKE_SYSTEM_NAME STREQUAL "iOS")
    find_library(DOODLE_OPENGL_FRAMEWORK OpenGL REQUIRED)
    target_link_libraries(doodle_renderer_skia PRIVATE ${DOODLE_OPENGL_FRAMEWORK})
  elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    find_library(DOODLE_OPENGLES_FRAMEWORK OpenGLES REQUIRED)
    target_link_libraries(doodle_renderer_skia PRIVATE ${DOODLE_OPENGLES_FRAMEWORK})
    target_compile_definitions(doodle_renderer_skia PRIVATE GLES_SILENCE_DEPRECATION=1)
  endif()
endif()
if(DOODLE_BUILD_TESTS)
 enable_testing()
 add_executable(doodle_provider_test tests/doodle_provider_test.c)
 target_link_libraries(doodle_provider_test PRIVATE doodle_core)
 add_test(NAME doodle_provider COMMAND doodle_provider_test)
 add_executable(doodle_provider_stubs_test tests/doodle_provider_stubs_test.c)
 target_link_libraries(doodle_provider_stubs_test PRIVATE doodle_core)
 add_test(NAME doodle_provider_stubs COMMAND doodle_provider_stubs_test)
endif()
install(TARGETS doodle_core EXPORT DoodleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(TARGET doodle_renderer_skia)
  install(TARGETS doodle_renderer_skia EXPORT DoodleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT DoodleTargets NAMESPACE Doodle:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/DoodleConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
