cmake_minimum_required(VERSION 3.21)
project(Magic VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(MAGIC_BACKEND "CPU" CACHE STRING "Magic backend: CPU, OPENGL, METAL, VULKAN, WEB")
set_property(CACHE MAGIC_BACKEND PROPERTY STRINGS CPU OPENGL METAL VULKAN WEB)
option(MAGIC_BUILD_TESTS "Build Magic tests" ON)
if(NOT MAGIC_BACKEND STREQUAL "CPU")
  message(FATAL_ERROR "MAGIC_BACKEND=${MAGIC_BACKEND} is declared but not implemented for this repository revision; select CPU.")
endif()
if(NOT TARGET Board::Board)
  find_package(Board CONFIG REQUIRED)
endif()
add_library(magic_core src/magic_context.c backends/cpu/magic_cpu_context.c)
set_target_properties(magic_core PROPERTIES EXPORT_NAME Magic)
add_library(Magic::Magic ALIAS magic_core)
target_link_libraries(magic_core PUBLIC Board::Board)
target_include_directories(magic_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(magic_core PUBLIC c_std_11)
add_library(magic_backend_cpu INTERFACE)
set_target_properties(magic_backend_cpu PROPERTIES EXPORT_NAME Cpu)
add_library(Magic::Cpu ALIAS magic_backend_cpu)
target_link_libraries(magic_backend_cpu INTERFACE magic_core)
if(MAGIC_BUILD_TESTS)
  enable_testing()
  add_executable(magic_cpu_test tests/magic_cpu_test.c)
  target_link_libraries(magic_cpu_test PRIVATE magic_core)
  add_test(NAME magic_cpu COMMAND magic_cpu_test)
endif()
install(TARGETS magic_core magic_backend_cpu EXPORT MagicTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT MagicTargets NAMESPACE Magic:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/MagicConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/MagicConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/MagicConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/MagicConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/MagicConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
