# SPDX-FileCopyrightText: 2026 Amalgam Solucoes em TI Ltda.
# SPDX-License-Identifier: LGPL-2.1-only
cmake_minimum_required(VERSION 3.21)
project(Magic VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(MAGIC_BACKEND "CPU" CACHE STRING "Magic backend: CPU, OPENGL, METAL, VULKAN, WEB")
set_property(CACHE MAGIC_BACKEND PROPERTY STRINGS CPU OPENGL METAL VULKAN WEB)
option(MAGIC_BUILD_TESTS "Build Magic tests" ON)
if(NOT MAGIC_BACKEND STREQUAL "CPU" AND NOT MAGIC_BACKEND STREQUAL "OPENGL" AND NOT MAGIC_BACKEND STREQUAL "METAL" AND NOT MAGIC_BACKEND STREQUAL "VULKAN" AND NOT MAGIC_BACKEND STREQUAL "WEB")
  message(FATAL_ERROR "MAGIC_BACKEND=${MAGIC_BACKEND} is declared but not implemented for this repository revision; select CPU, OPENGL, METAL, VULKAN, or WEB.")
endif()
if(NOT TARGET Board::Board)
  find_package(Board CONFIG REQUIRED)
endif()
set(MAGIC_SOURCES src/magic_context.c backends/cpu/magic_cpu_context.c)
if(MAGIC_BACKEND STREQUAL "OPENGL")
  list(APPEND MAGIC_SOURCES backends/opengl/magic_opengl_context.c)
endif()
if(MAGIC_BACKEND STREQUAL "METAL")
  if(NOT APPLE)
    message(FATAL_ERROR "MAGIC_BACKEND=METAL requires an Apple platform.")
  endif()
  enable_language(OBJCXX)
  list(APPEND MAGIC_SOURCES backends/metal/magic_metal_context.mm)
endif()
if(MAGIC_BACKEND STREQUAL "VULKAN")
  enable_language(CXX)
  list(APPEND MAGIC_SOURCES backends/vulkan/magic_vulkan_context.cpp)
endif()
if(MAGIC_BACKEND STREQUAL "WEB")
  if(NOT EMSCRIPTEN)
    message(FATAL_ERROR "MAGIC_BACKEND=WEB requires the Emscripten CMake toolchain.")
  endif()
  list(APPEND MAGIC_SOURCES backends/web/magic_web_context.c)
endif()
add_library(magic_core ${MAGIC_SOURCES})
set_target_properties(magic_core PROPERTIES EXPORT_NAME Magic)
add_library(Magic::Magic ALIAS magic_core)
target_link_libraries(magic_core PUBLIC Board::Board)
target_include_directories(magic_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(magic_core PUBLIC c_std_11)
target_compile_definitions(magic_core PRIVATE MAGIC_BUILD_OPENGL=$<STREQUAL:${MAGIC_BACKEND},OPENGL> MAGIC_BUILD_METAL=$<STREQUAL:${MAGIC_BACKEND},METAL> MAGIC_BUILD_VULKAN=$<STREQUAL:${MAGIC_BACKEND},VULKAN> MAGIC_BUILD_WEB=$<STREQUAL:${MAGIC_BACKEND},WEB>)
if(MAGIC_BACKEND STREQUAL "OPENGL")
  if(CMAKE_SYSTEM_NAME STREQUAL "Android")
    find_library(MAGIC_EGL_LIBRARY EGL REQUIRED)
    find_library(MAGIC_GLESV3_LIBRARY GLESv3 REQUIRED)
    target_link_libraries(magic_core PRIVATE ${MAGIC_EGL_LIBRARY} ${MAGIC_GLESV3_LIBRARY})
    target_compile_definitions(magic_core PRIVATE MAGIC_BUILD_ANDROID_OPENGL=1)
  elseif(CMAKE_SYSTEM_NAME STREQUAL "iOS")
    find_library(MAGIC_OPENGLES_FRAMEWORK OpenGLES REQUIRED)
    target_link_libraries(magic_core PRIVATE ${MAGIC_OPENGLES_FRAMEWORK})
    target_compile_definitions(magic_core PRIVATE MAGIC_BUILD_IOS_OPENGL=1 GLES_SILENCE_DEPRECATION=1)
  elseif(APPLE)
    find_library(MAGIC_OPENGL_FRAMEWORK OpenGL REQUIRED)
    target_link_libraries(magic_core PRIVATE ${MAGIC_OPENGL_FRAMEWORK})
  else()
    find_package(OpenGL REQUIRED)
    target_link_libraries(magic_core PRIVATE OpenGL::GL)
  endif()
endif()
if(MAGIC_BACKEND STREQUAL "METAL")
  find_library(MAGIC_METAL_FRAMEWORK Metal REQUIRED)
  find_library(MAGIC_QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
  target_link_libraries(magic_core PRIVATE ${MAGIC_METAL_FRAMEWORK} ${MAGIC_QUARTZCORE_FRAMEWORK})
endif()
if(MAGIC_BACKEND STREQUAL "VULKAN")
  if(CMAKE_SYSTEM_NAME STREQUAL "Android")
    find_library(MAGIC_VULKAN_LIBRARY vulkan REQUIRED)
    target_link_libraries(magic_core PRIVATE ${MAGIC_VULKAN_LIBRARY})
  else()
    find_package(Vulkan REQUIRED)
    target_link_libraries(magic_core PRIVATE Vulkan::Vulkan)
  endif()
endif()
if(MAGIC_BACKEND STREQUAL "WEB")
  target_link_options(magic_core PRIVATE "-sUSE_WEBGL2=1" "-sMIN_WEBGL_VERSION=2" "-sMAX_WEBGL_VERSION=2")
endif()
add_library(magic_backend_cpu INTERFACE)
set_target_properties(magic_backend_cpu PROPERTIES EXPORT_NAME Cpu)
add_library(Magic::Cpu ALIAS magic_backend_cpu)
target_link_libraries(magic_backend_cpu INTERFACE magic_core)
if(MAGIC_BACKEND STREQUAL "OPENGL")
  add_library(magic_backend_opengl INTERFACE)
  set_target_properties(magic_backend_opengl PROPERTIES EXPORT_NAME OpenGL)
  add_library(Magic::OpenGL ALIAS magic_backend_opengl)
  target_link_libraries(magic_backend_opengl INTERFACE magic_core)
endif()
if(MAGIC_BACKEND STREQUAL "METAL")
  add_library(magic_backend_metal INTERFACE)
  set_target_properties(magic_backend_metal PROPERTIES EXPORT_NAME Metal)
  add_library(Magic::Metal ALIAS magic_backend_metal)
  target_link_libraries(magic_backend_metal INTERFACE magic_core)
endif()
if(MAGIC_BACKEND STREQUAL "VULKAN")
  add_library(magic_backend_vulkan INTERFACE)
  set_target_properties(magic_backend_vulkan PROPERTIES EXPORT_NAME Vulkan)
  add_library(Magic::Vulkan ALIAS magic_backend_vulkan)
  target_link_libraries(magic_backend_vulkan INTERFACE magic_core)
endif()
if(MAGIC_BACKEND STREQUAL "WEB")
  add_library(magic_backend_web INTERFACE)
  set_target_properties(magic_backend_web PROPERTIES EXPORT_NAME Web)
  add_library(Magic::Web ALIAS magic_backend_web)
  target_link_libraries(magic_backend_web INTERFACE magic_core)
endif()
if(MAGIC_BUILD_TESTS)
  enable_testing()
  add_executable(magic_cpu_test tests/magic_cpu_test.c)
  target_link_libraries(magic_cpu_test PRIVATE magic_core)
  add_test(NAME magic_cpu COMMAND magic_cpu_test)
endif()
install(TARGETS magic_core magic_backend_cpu EXPORT MagicTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(TARGET magic_backend_opengl)
  install(TARGETS magic_backend_opengl EXPORT MagicTargets)
endif()
if(TARGET magic_backend_metal)
  install(TARGETS magic_backend_metal EXPORT MagicTargets)
endif()
if(TARGET magic_backend_vulkan)
  install(TARGETS magic_backend_vulkan EXPORT MagicTargets)
endif()
if(TARGET magic_backend_web)
  install(TARGETS magic_backend_web EXPORT MagicTargets)
endif()
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT MagicTargets NAMESPACE Magic:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/MagicConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/MagicConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/MagicConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/MagicConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/MagicConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Magic)
